--- a/vignettes/pcaExplorer.Rmd
+++ b/vignettes/pcaExplorer.Rmd
@@ -28,6 +28,7 @@ vignette: >
 **Authors**: `r packageDescription("pcaExplorer")[["Author"]]`<br />
 **Version**: `r packageDescription("pcaExplorer")$Version`<br />
 **Compiled date**: `r Sys.Date()`<br />
+**Last edited**: 2019-02-06<br />
 **License**: `r packageDescription("pcaExplorer")[["License"]]`<br />
 
 ```{r style, echo = FALSE, results = 'asis'}
